--- a/Analog Clock JS/index.html
+++ b/Analog Clock JS/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Digital Clock</title>
+    <title>Javascript Analog Clock</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
             <div class="second"></div>
             <div class="dot"></div>
         </div>
-        <h2 class="text">DIGITAL CLOCK</h2> 
+        <h2 class="text">ANALOG CLOCK</h2> 
     </div>
    
 
